tests/ui/type-alias-impl-trait/rpit_tait_equality_in_canonical_query.current.stderr
error: internal compiler error: no errors encountered even though `delay_span_bug` issued

error: internal compiler error: ambiguity performing ParamEnvAnd { param_env: ParamEnv { caller_bounds: [], reveal: UserFacing }, value: ProvePredicate { predicate: Binder { value: ProjectionPredicate(AliasTy { args: [FnDef(DefId(get_rpit), []), ()], def_id: DefId(ops::function::FnOnce::Output) }, Term::Ty(Alias(Opaque, AliasTy { args: [], def_id: DefId(Opaque::{opaque#0}) }))), bound_vars: [] } } }
  --> $DIR/rpit_tait_equality_in_canonical_query.rs:28:5
   |
LL |     query(get_rpit);
   |     ^^^^^^^^^^^^^^^
   |
  --> $DIR/rpit_tait_equality_in_canonical_query.rs:28:5
   |
LL |     query(get_rpit);
   |     ^^^^^^^^^^^^^^^




query stack during panic:
end of query stack
error: aborting due to 2 previous errors

